--- a/index.html
+++ b/index.html
@@ -10,35 +10,39 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="text-center">
-<header>
-    <h1 class="display-4 text-primary">HOX CHANNEL</h1>
+    <header>
+      <h1 class="display-4 text-primary">HOX CHANNEL</h1>
 
-    <h2 class="display-5">Well come to hox channel weather forecast news...</h2>
+      <h2 class="display-5">
+        Well come to hox channel weather forecast news...
+      </h2>
 
-    <div class="container mb-3 w-25">
-      <label for="city" class="form-label display-6">City</label>
-      <input
-        type="text"
-        class="form-control"
-        id="city"
-        placeholder="Enter City"
-      />
-    </div>
-</header>
+      <div class="container mb-3 w-25">
+        <label for="city" class="form-label display-6">City</label>
+        <input
+          type="text"
+          class="form-control"
+          id="city"
+          placeholder="Enter City"
+        />
+      </div>
+    </header>
 
-  
-    <main class=" container-fluid row justify-content-center align-items-center mb-4">
-   
-    </main>
+    <main
+      class="container-fluid row justify-content-center align-items-center mb-4"
+    ></main>
 
-
-    <footer>
-
-    </footer>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
